<resources>
    <string name="app_name">Asandic</string>
    <string name="welcome">Welcome to Asandic</string>
    <string name="intro">Are you tired of looking for a place very near to campus to rent? Worry no more, for you are sorted out. Take a deep breath and relax for we have you. Join the club to choose the hostel or homestel of your liking.</string>
    <string name="buttonTextReadMore">Read More</string>
    <string name="buttonTextJoin">REGISTER</string>
    <string name="emailhint">Email or Phone</string>
    <string name="passhint">Password</string>
    <string name="login">Login</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone</string>
    <string name="id">Reference number</string>
    <string name="pass">Password</string>
    <string name="signup">Sign Up</string>
    <string name="mgender">Male</string>
    <string name="fgender">Female</string>
    <string name="gen">Gender: </string>
    <string name="passCon">Confirm Password</string>
    <string name="quick">Quick Access</string>
    <string name="item1">Logout</string>
    <string name="news">News Feed</string>
    <string name="events">Campus Events</string>
    <string name="noInt">No internet connection</string>
    <string name="profile">Profile</string>
    <string name="not">Notification</string>
    <string name="pay">Payments</string>
    <string name="available">Hostels Available</string>
    <string name="con">Contact</string>
    <string name="user">Username</string>
    <string name="camp">Campus</string>
    <string name="save">Save</string>
    <string name="rooms">Rooms Available</string>
    <string name="hname">The Austin Hostel</string>
    <string name="nname">50.00 /month</string>
    <string name="location">Asokwa, Stadium</string>
    <string name="hostelName">The Austin Hostel</string>
    <string name="Room">Roomies:</string>
    <string name="contact">Help</string>
    <string name="info">For further information on our services:</string>
    <string name="copy">© copyright 2020 emalextechnologies </string>
    <string name="book">Book Room</string>
</resources>
